package com.edu.utp.corrientazo.modelo;

public enum EstadoPedido {
SIN_ENTREGAR,PENDIENTE_COBRAR
}
